--- a/interno-tailwind/index.html
+++ b/interno-tailwind/index.html
@@ -186,11 +186,489 @@
 
       <!-- testimonial -->
       <section class="testimonial mt-[80px] xl:mt-[200px] relative z-20">
-        <div class="testimonial_bg container mx-auto">testimonial</div>
+        <div
+          class="testimonial_bg container mx-auto bg-accent-secondary rounded-[70px] px-6"
+        >
+          <div class="flex flex-col items-center pt-[88px] pb-[110px]">
+            <h2 class="testimonial_title h2 mb-9 text-center">
+              What clients say
+            </h2>
+
+            <!-- slider -->
+            <div class="w-full">
+              <div class="testimonial_slider swiper h-[400px]">
+                <div class="swiper-wrapper">
+                  <!-- slide 1 -->
+                  <div class="swiper-slide">
+                    <!-- item -->
+                    <div
+                      class="testimonial_item w-full max-w-[450px] h-[340px] bg-white rounded-[30px] flex flex-col justify-center p-9 mx-auto"
+                    >
+                      <div class="flex gap-4 mb-6">
+                        <img
+                          src="./assets/images/testimonial/01.png"
+                          alt="img-1"
+                        />
+                        <div>
+                          <h3 class="h3">Nattasha Mith</h3>
+                          <div>Greenville, USA</div>
+                        </div>
+                      </div>
+                      <p>
+                        Lorem Ipsum is simply dummy text of the typesetting
+                        industry. Ipsum has been.
+                      </p>
+                    </div>
+                  </div>
+
+                  <!-- slide 2 -->
+                  <div class="swiper-slide">
+                    <!-- item -->
+                    <div
+                      class="testimonial_item w-full max-w-[450px] h-[340px] bg-white rounded-[30px] flex flex-col justify-center p-9 mx-auto"
+                    >
+                      <div class="flex gap-4 mb-6">
+                        <img
+                          src="./assets/images/testimonial/02.png"
+                          alt="img-1"
+                        />
+                        <div>
+                          <h3 class="h3">Jessica White</h3>
+                          <div>Oak Ridge, USA</div>
+                        </div>
+                      </div>
+                      <p>
+                        Lorem Ipsum is simply dummy text of the typesetting
+                        industry. Ipsum has been.
+                      </p>
+                    </div>
+                  </div>
+
+                  <!-- slide 3 -->
+                  <div class="swiper-slide">
+                    <!-- item -->
+                    <div
+                      class="testimonial_item w-full max-w-[450px] h-[340px] bg-white rounded-[30px] flex flex-col justify-center p-9 mx-auto"
+                    >
+                      <div class="flex gap-4 mb-6">
+                        <img
+                          src="./assets/images/testimonial/03.png"
+                          alt="img-1"
+                        />
+                        <div>
+                          <h3 class="h3">Mike Davis</h3>
+                          <div>Berlin, Germany</div>
+                        </div>
+                      </div>
+                      <p>
+                        Lorem Ipsum is simply dummy text of the typesetting
+                        industry. Ipsum has been.
+                      </p>
+                    </div>
+                  </div>
+
+                  <!-- slide 4 -->
+                  <div class="swiper-slide">
+                    <!-- item -->
+                    <div
+                      class="testimonial_item w-full max-w-[450px] h-[340px] bg-white rounded-[30px] flex flex-col justify-center p-9 mx-auto"
+                    >
+                      <div class="flex gap-4 mb-6">
+                        <img
+                          src="./assets/images/testimonial/04.png"
+                          alt="img-1"
+                        />
+                        <div>
+                          <h3 class="h3">Olivia Wilson</h3>
+                          <div>Blue Ridge, France</div>
+                        </div>
+                      </div>
+                      <p>
+                        Lorem Ipsum is simply dummy text of the typesetting
+                        industry. Ipsum has been.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- swiper pagination -->
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
+      <!-- brand -->
+      <section class="brands mt-[80px] xl:mt-[150px] relative z-20">
+        <div class="container mx-auto">
+          <div
+            class="flex flex-col xl:flex-row justify-between items-center gap-12"
+          >
+            <img
+              class="brands_img"
+              src="./assets/images/brands/01.svg"
+              alt="brand-1"
+            />
+            <img
+              class="brands_img"
+              src="./assets/images/brands/02.svg"
+              alt="brand-2"
+            />
+            <img
+              class="brands_img"
+              src="./assets/images/brands/03.svg"
+              alt="brand-3"
+            />
+            <img
+              class="brands_img"
+              src="./assets/images/brands/04.svg"
+              alt="brand-4"
+            />
+            <img
+              class="brands_img"
+              src="./assets/images/brands/05.svg"
+              alt="brand-5"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- work -->
+      <section class="work mt-[80px] xl:mt-[150px] relative z-20">
+        <div class="container mx-auto xl:px-0">
+          <!-- text -->
+          <div class="text-center mb-24">
+            <h2 class="work_title h2 mb-4">Follow Our Projects</h2>
+            <p class="work_subtitle max-w-3xl mx-auto">
+              It is a long established fact that a reader will be distracted by
+              the of readable content of page lookings at its layouts points.
+            </p>
+          </div>
+
+          <!-- grid -->
+          <div
+            class="work_grid grid xl:grid-cols-2 grid-cols-1 gap-x-[104px] gap-y-[56px]"
+          >
+            <!-- item -->
+            <div class="w-full max-w-[548px] h-full mx-auto">
+              <img
+                class="mb-6"
+                src="./assets/images/work/01.png"
+                alt="work-1"
+              />
+
+              <div class="flex justify-between items-center w-full">
+                <div>
+                  <h3 class="h3">Modern Kitchen</h3>
+                  <p>Decor/Architecture</p>
+                </div>
+                <button
+                  class="bg-accent-secondary hover:bg-accent-default/20 w-[70px] h-[70px] rounded-full transition-all duration-300"
+                >
+                  <i
+                    class="ri-arrow-right-s-line text-3xl text-primary-default pl-1"
+                  ></i>
+                </button>
+              </div>
+            </div>
+
+            <!-- item -->
+            <div class="w-full max-w-[548px] h-full mx-auto">
+              <img
+                class="mb-6"
+                src="./assets/images/work/02.png"
+                alt="work-1"
+              />
+
+              <div class="flex justify-between items-center w-full">
+                <div>
+                  <h3 class="h3">Modern Kitchen</h3>
+                  <p>Decor/Architecture</p>
+                </div>
+                <button
+                  class="bg-accent-secondary hover:bg-accent-default/20 w-[70px] h-[70px] rounded-full transition-all duration-300"
+                >
+                  <i
+                    class="ri-arrow-right-s-line text-3xl text-primary-default pl-1"
+                  ></i>
+                </button>
+              </div>
+            </div>
+
+            <!-- item -->
+            <div class="w-full max-w-[548px] h-full mx-auto">
+              <img
+                class="mb-6"
+                src="./assets/images/work/03.png"
+                alt="work-1"
+              />
+
+              <div class="flex justify-between items-center w-full">
+                <div>
+                  <h3 class="h3">Modern Kitchen</h3>
+                  <p>Decor/Architecture</p>
+                </div>
+                <button
+                  class="bg-accent-secondary hover:bg-accent-default/20 w-[70px] h-[70px] rounded-full transition-all duration-300"
+                >
+                  <i
+                    class="ri-arrow-right-s-line text-3xl text-primary-default pl-1"
+                  ></i>
+                </button>
+              </div>
+            </div>
+
+            <!-- item 4 -->
+            <div class="w-full max-w-[548px] h-full mx-auto">
+              <img
+                class="mb-6"
+                src="./assets/images/work/04.png"
+                alt="work-1"
+              />
+
+              <div class="flex justify-between items-center w-full">
+                <div>
+                  <h3 class="h3">Modern Kitchen</h3>
+                  <p>Decor/Architecture</p>
+                </div>
+                <button
+                  class="bg-accent-secondary hover:bg-accent-default/20 w-[70px] h-[70px] rounded-full transition-all duration-300"
+                >
+                  <i
+                    class="ri-arrow-right-s-line text-3xl text-primary-default pl-1"
+                  ></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- stats -->
+      <section
+        class="stats mt-[80px] xl:mt-[150px] relative z-20 bg-accent-secondary py-[80px] xl:py-[150px]"
+      >
+        <div class="container mx-auto">
+          <!-- grid -->
+          <div class="grid xl:grid-cols-4 grid-cols-1 gap-12">
+            <!-- grid item -->
+            <div
+              class="stats_item text-center xl:border-r xl:border-accent-default"
+            >
+              <h3 class="h1 font-primary text-accent-default">12</h3>
+              <p>Years Of Experience</p>
+            </div>
+
+            <!-- grid item -->
+            <div
+              class="stats_item text-center xl:border-r xl:border-accent-default"
+            >
+              <h3 class="h1 font-primary text-accent-default">85</h3>
+              <p>Projects Completed</p>
+            </div>
+
+            <!-- grid item -->
+            <div
+              class="stats_item text-center xl:border-r xl:border-accent-default"
+            >
+              <h3 class="h1 font-primary text-accent-default">15</h3>
+              <p>Active Projects</p>
+            </div>
+
+            <!-- grid item -->
+            <div class="stats_item text-center">
+              <h3 class="h1 font-primary text-accent-default">95</h3>
+              <p>Happy Customers</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- news -->
+      <section class="news mt-[80px] xl:mt-[150px] relative z-20">
+        <div class="container mx-auto px-0">
+          <!-- text -->
+          <div class="text-center max-w-3xl mx-auto mb-[52px]">
+            <h2 class="news_title h2 mb-3">Articles & News</h2>
+            <p class="news_subtitle">
+              It is a long established fact that a reader will be distracted by
+              the of readable content of a page when lookings at its layouts the
+              points of using.
+            </p>
+          </div>
+
+          <!-- grid -->
+          <div class="news_grid grid grid-cols-1 xl:grid-cols-3 gap-[27px]">
+            <!-- grid item -->
+            <div
+              class="news_item w-full max-w-[382px] h-[520px] border border-primary-default/20 rounded-[62px] p-[20px] hover:bg-accent-secondary transition-all group cursor-pointer mx-auto xl:mx-0"
+            >
+              <img src="./assets/images/news/01.png" alt="new-1" class="mb-5" />
+              <div class="flex flex-col gap-[30px]">
+                <h3 class="h3">
+                  Let’s Get Solution For Building Construction Work
+                </h3>
+                <div class="flex items-center justify-between">
+                  <p class="text-base">22 June,2024</p>
+                  <button
+                    class="bg-accent-secondary w-[52px] h-[52px] rounded-full group-hover:bg-white transition-all"
+                  >
+                    <i
+                      class="ri-arrow-right-s-line text-3xl text-primary-default pl-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- grid item 2 -->
+            <div
+              class="news_item w-full max-w-[382px] h-[520px] border border-primary-default/20 rounded-[62px] p-[20px] hover:bg-accent-secondary transition-all group cursor-pointer mx-auto xl:mx-0"
+            >
+              <img src="./assets/images/news/02.png" alt="new-1" class="mb-5" />
+              <div class="flex flex-col gap-[30px]">
+                <h3 class="h3">
+                  Low Cost Latest Invented Interior Designing Ideas.
+                </h3>
+                <div class="flex items-center justify-between">
+                  <p class="text-base">24 June,2024</p>
+                  <button
+                    class="bg-accent-secondary w-[52px] h-[52px] rounded-full group-hover:bg-white transition-all"
+                  >
+                    <i
+                      class="ri-arrow-right-s-line text-3xl text-primary-default pl-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- grid item 3-->
+            <div
+              class="news_item w-full max-w-[382px] h-[520px] border border-primary-default/20 rounded-[62px] p-[20px] hover:bg-accent-secondary transition-all group cursor-pointer mx-auto xl:mx-0"
+            >
+              <img src="./assets/images/news/03.png" alt="new-1" class="mb-5" />
+              <div class="flex flex-col gap-[30px]">
+                <h3 class="h3">
+                  Best For Any Office & Business Interior Solution
+                </h3>
+                <div class="flex items-center justify-between">
+                  <p class="text-base">28 June,2024</p>
+                  <button
+                    class="bg-accent-secondary w-[52px] h-[52px] rounded-full group-hover:bg-white transition-all"
+                  >
+                    <i
+                      class="ri-arrow-right-s-line text-3xl text-primary-default pl-1"
+                    ></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- contact -->
+      <section class="contact mt-[80px] xl:mt-[150px] relative z-20">
+        <div
+          class="contact_container container mx-auto bg-primary-default sm:rounded-[70px] py-[80px]"
+        >
+          <div class="contact_text max-w-[640px] mx-auto text-center">
+            <h2 class="h2 text-white mb-4">Do you want to join Interno?</h2>
+            <p class="text-white mb-8 max-w-sm xl:max-w-none mx-auto">
+              It is a long established fact will be distracted.
+            </p>
+            <button class="btn btn-accent mx-auto">
+              Connect with us
+              <i class="ri-arrow-right-line text-primary-default"></i>
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <!-- footer -->
+      <footer class="footer mt-[80px] xl:mt-[150px] relative z-20">
+        <div class="container mx-auto px-0">
+          <div class="flex flex-col xl:flex-row xl:gap-[100px] xl:mb-[150px]">
+            <div
+              class="footer_item w-full max-w-[400px] mx-auto mb-8 text-center xl:text-left"
+            >
+              <!-- logo -->
+              <a href="#" class="flex justify-center xl:justify-start mb-8">
+                <img src="./assets/images/logo.svg" alt="logo" />
+              </a>
+              <p class="mb-8 text-xl">
+                It is a long established fact that a reader will be distracted
+                lookings.
+              </p>
+
+              <!-- socials -->
+              <ul
+                class="text-primary-default flex gap-[54px] justify-center xl:justify-start"
+              >
+                <li>
+                  <a href="#"><i class="ri-facebook-fill text-2xl"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="ri-twitter-fill text-2xl"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="ri-linkedin-fill text-2xl"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="ri-instagram-fill text-2xl"></i></a>
+                </li>
+              </ul>
+            </div>
+
+            <div
+              class="flex-1 flex flex-col xl:flex-row text-center xl:text-left gap-12 xl:gap-[100px] xl:justify-end"
+            >
+              <div class="footer_item">
+                <h3 class="h3 mb-3">Pages</h3>
+                <ul class="flex flex-col gap-4">
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Testimonials</a></li>
+                  <li><a href="#">Our Work</a></li>
+                  <li><a href="#">News</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </div>
+
+              <div class="footer_item">
+                <h3 class="h3 mb-3">Services</h3>
+                <ul class="flex flex-col gap-4">
+                  <li><a href="#">Kitchen</a></li>
+                  <li><a href="#">Living Area</a></li>
+                  <li><a href="#">Bathroom</a></li>
+                  <li><a href="#">Bedroom</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </div>
+
+              <div class="footer_item max-w-[260px] mx-auto xl:mx-0">
+                <h3 class="h3 mb-3">Contact</h3>
+                <div class="flex flex-col gap-6 text-[20px]">
+                  <p>55 East Birchwood Ave. Brooklyn, New York 11201</p>
+                  <p>contact@interno.com</p>
+                  <p>(123) 456 - 7890</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- copyright -->
+        <p
+          class="footer_copyright text-center text-lg py-10 bg-white xl:border-t"
+        >
+          Copyright &copy; Interno 2024. All rights reserved.
+        </p>
+      </footer>
+
       <!-- temporary div -->
-      <div class="h-[3000px]"></div>
+      <!-- <div class="h-[3000px]"></div> -->
     </main>
 
     <!-- js -->
