--- a/html-css-js-projects/education-web/index.html
+++ b/html-css-js-projects/education-web/index.html
@@ -6,6 +6,7 @@
     <title>Education Site</title>
     <!-- link CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
 
     <!-- link Icons -->
     <link
@@ -376,7 +377,191 @@
       </div>
     </section>
 
+    <!-- testimonial -->
+    <section class="testimonial">
+      <h2>Students' Testimonials</h2>
+      <div class="container testimonial_container mySwiper">
+        <div class="swiper-wrapper">
+          <!-- test 1 -->
+          <article class="test swiper-slide">
+            <div class="avatar">
+              <img src="./assets/images/avatar1.jpg" alt="avatar1" />
+            </div>
+
+            <div class="test_info">
+              <h5>Dania Ayi</h5>
+              <small>Student</small>
+            </div>
+
+            <div class="test_body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
+                rerum qui corporis quibusdam. Quia odit excepturi, nobis itaque
+                similique soluta libero iste, officiis unde possimus deserunt
+                numquam expedita quam eos!
+              </p>
+            </div>
+          </article>
+
+          <!-- test 2 -->
+          <article class="test swiper-slide">
+            <div class="avatar">
+              <img src="./assets/images/avatar2.jpg" alt="avatar2" />
+            </div>
+
+            <div class="test_info">
+              <h5>Ernest Achiever</h5>
+              <small>Web Developer</small>
+            </div>
+
+            <div class="test_body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
+                rerum qui corporis quibusdam. Quia odit excepturi, nobis itaque
+                similique soluta libero iste, officiis unde possimus deserunt
+                numquam expedita quam eos!
+              </p>
+            </div>
+          </article>
+
+          <!-- test 3 -->
+          <article class="test swiper-slide">
+            <div class="avatar">
+              <img src="./assets/images/avatar3.jpg" alt="avatar3" />
+            </div>
+
+            <div class="test_info">
+              <h5>Edem Quist</h5>
+              <small>Student</small>
+            </div>
+
+            <div class="test_body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
+                rerum qui corporis quibusdam. Quia odit excepturi, nobis itaque
+                similique soluta libero iste, officiis unde possimus deserunt
+                numquam expedita quam eos!
+              </p>
+            </div>
+          </article>
+
+          <!-- test 4 -->
+          <article class="test swiper-slide">
+            <div class="avatar">
+              <img src="./assets/images/avatar4.jpg" alt="avatar4" />
+            </div>
+
+            <div class="test_info">
+              <h5>Hajia Bintu</h5>
+              <small>Student</small>
+            </div>
+
+            <div class="test_body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
+                rerum qui corporis quibusdam. Quia odit excepturi, nobis itaque
+                similique soluta libero iste, officiis unde possimus deserunt
+                numquam expedita quam eos!
+              </p>
+            </div>
+          </article>
+
+          <!-- test 5 -->
+          <article class="test swiper-slide">
+            <div class="avatar">
+              <img src="./assets/images/avatar5.jpg" alt="avatar5" />
+            </div>
+
+            <div class="test_info">
+              <h5>Jane Doe</h5>
+              <small>Student</small>
+            </div>
+
+            <div class="test_body">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero
+                rerum qui corporis quibusdam. Quia odit excepturi, nobis itaque
+                similique soluta libero iste, officiis unde possimus deserunt
+                numquam expedita quam eos!
+              </p>
+            </div>
+          </article>
+        </div>
+
+        <div class="swiper-pagination"></div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="container footer_container">
+        <div class="footer_1">
+          <a href="index.html" class="footer_logo">
+            <h4>Bloomefy</h4>
+          </a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime,
+            dolorum.
+          </p>
+        </div>
+
+        <div class="footer_2">
+          <h4>Permalinks</h4>
+          <ul class="permalinks">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer_3">
+          <h4>Privacy</h4>
+          <ul class="privacy">
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms and Conditions</a></li>
+            <li><a href="#">Refund Policy</a></li>
+          </ul>
+        </div>
+
+        <div class="footer_4">
+          <h4>Contact Us</h4>
+          <div>
+            <p>+92 300 000 0000</p>
+            <p>contact@gmail.com</p>
+          </div>
+
+          <ul class="footer_socials">
+            <li>
+              <a href="#">
+                <i class="ri-facebook-fill"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="ri-instagram-fill"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="ri-twitter-fill"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="ri-linkedin-fill"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="copy">
+        <small>Copyright &copy; Bloomefy. All rights are reserved.</small>
+      </div>
+    </footer>
+
     <!-- js -->
+    <script src="./assets/js/swiper-bundle.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
