--- a/html-css-js-tailwind-projects/dashboard-html-css-js/index.html
+++ b/html-css-js-tailwind-projects/dashboard-html-css-js/index.html
@@ -81,7 +81,262 @@
 
       <main>
         <h1>Dashboard</h1>
+
+        <div class="date">
+          <input type="date" />
+        </div>
+
+        <div class="insights">
+          <div class="sales">
+            <i class="ri-bar-chart-box-line"></i>
+
+            <div class="middle">
+              <div class="left">
+                <h3>Total Sales</h3>
+                <h1>$25,024</h1>
+              </div>
+              <div class="progress">
+                <svg>
+                  <circle cx="38" cy="38" r="36"></circle>
+                </svg>
+                <div class="number">
+                  <p>81%</p>
+                </div>
+              </div>
+            </div>
+
+            <small class="text_muted">Last 24 Hours</small>
+          </div>
+          <!-- End of Sales -->
+
+          <div class="expenses">
+            <i class="ri-calendar-todo-line"></i>
+
+            <div class="middle">
+              <div class="left">
+                <h3>Total Expenses</h3>
+                <h1>$14,160</h1>
+              </div>
+              <div class="progress">
+                <svg>
+                  <circle cx="38" cy="38" r="36"></circle>
+                </svg>
+                <div class="number">
+                  <p>62%</p>
+                </div>
+              </div>
+            </div>
+
+            <small class="text_muted">Last 24 Hours</small>
+          </div>
+          <!-- End of Expenses -->
+
+          <div class="income">
+            <i class="ri-line-chart-line"></i>
+
+            <div class="middle">
+              <div class="left">
+                <h3>Total Income</h3>
+                <h1>$10,864</h1>
+              </div>
+              <div class="progress">
+                <svg>
+                  <circle cx="38" cy="38" r="36"></circle>
+                </svg>
+                <div class="number">
+                  <p>44%</p>
+                </div>
+              </div>
+            </div>
+
+            <small class="text_muted">Last 24 Hours</small>
+          </div>
+          <!-- End of Income -->
+        </div>
+
+        <!-- .recent orders -->
+        <div class="recent-orders">
+          <h2>Recent Orders</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Product Name</th>
+                <th>Product Number</th>
+                <th>Payment</th>
+                <th>Status</th>
+                <th></th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>Pizza</td>
+                <td>123</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+
+              <tr>
+                <td>Pizza</td>
+                <td>123</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+
+              <tr>
+                <td>Pizza</td>
+                <td>123</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+
+              <tr>
+                <td>Pizza</td>
+                <td>123</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+
+              <tr>
+                <td>Pizza</td>
+                <td>123</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+
+              <tr>
+                <td>Pizza</td>
+                <td>123</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <a href="#">Show All</a>
+        </div>
       </main>
+
+      <!-- right -->
+      <div class="right">
+        <div class="top">
+          <button id="menu-btn">
+            <i class="ri-menu-4-line"></i>
+          </button>
+
+          <div class="theme-toggler">
+            <i class="ri-sun-line active"></i>
+            <i class="ri-moon-fill"></i>
+          </div>
+
+          <div class="profile">
+            <div class="info">
+              <p>Hey, <b>Danial</b></p>
+              <small class="text_muted">Admin</small>
+            </div>
+            <div class="profile-photo">
+              <img src="./assets/images/profile-1.jpg" alt="user1" />
+            </div>
+          </div>
+        </div>
+        <!-- end of top -->
+
+        <div class="recent-updates">
+          <h2>Recent Updates</h2>
+          <div class="updates">
+            <div class="update">
+              <div class="profile-photo">
+                <img src="./assets/images/profile-2.jpg" alt="user2" />
+              </div>
+              <div class="message">
+                <p>
+                  <b>Mike Tyson</b> received his order of Night Lion Tech GPS
+                  drone.
+                </p>
+                <small class="text_muted">2 Minutes Ago</small>
+              </div>
+            </div>
+
+            <div class="update">
+              <div class="profile-photo">
+                <img src="./assets/images/profile-3.jpg" alt="user2" />
+              </div>
+              <div class="message">
+                <p>
+                  <b>Mike Tyson</b> received his order of Night Lion Tech GPS
+                  drone.
+                </p>
+                <small class="text_muted">2 Minutes Ago</small>
+              </div>
+            </div>
+
+            <div class="update">
+              <div class="profile-photo">
+                <img src="./assets/images/profile-4.jpg" alt="user2" />
+              </div>
+              <div class="message">
+                <p>
+                  <b>Mike Tyson</b> received his order of Night Lion Tech GPS
+                  drone.
+                </p>
+                <small class="text_muted">2 Minutes Ago</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- sales Analytics -->
+        <div class="sales-analytics">
+          <h2>Sales Analytics</h2>
+          <div class="item online">
+            <div class="icon">
+              <i class="ri-shopping-cart-2-line"></i>
+            </div>
+            <div class="right">
+              <div class="info">
+                <h3>ONLINE ORDERS</h3>
+                <small class="text_muted">Last 24 Hours</small>
+              </div>
+              <h5 class="success">+39%</h5>
+              <h3>3839</h3>
+            </div>
+          </div>
+
+          <div class="item online">
+            <div class="icon">
+              <i class="ri-shopping-cart-2-line"></i>
+            </div>
+            <div class="right">
+              <div class="info">
+                <h3>ONLINE ORDERS</h3>
+                <small class="text_muted">Last 24 Hours</small>
+              </div>
+              <h5 class="success">+39%</h5>
+              <h3>3839</h3>
+            </div>
+          </div>
+
+          <div class="item online">
+            <div class="icon">
+              <i class="ri-shopping-cart-2-line"></i>
+            </div>
+            <div class="right">
+              <div class="info">
+                <h3>ONLINE ORDERS</h3>
+                <small class="text_muted">Last 24 Hours</small>
+              </div>
+              <h5 class="success">+39%</h5>
+              <h3>3839</h3>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- js -->
     <script src="./assets/js/main.js"></script>
