--- a/nokosocial-media/index.html
+++ b/nokosocial-media/index.html
@@ -35,7 +35,146 @@
     <main>
       <div class="container">
         <!-- left -->
-        <div class="left"></div>
+        <div class="left">
+          <a class="profile">
+            <div class="profile-picture">
+              <img src="./assets/images/profile-1.jpg" alt="user" />
+            </div>
+
+            <div class="handle">
+              <h4>Diana Ayi</h4>
+              <p class="text-muted">@dayi</p>
+            </div>
+          </a>
+
+          <!-- Sidebar -->
+          <div class="sidebar">
+            <a class="menu-item active">
+              <span><i class="ri-home-2-line"></i></span>
+              <h3>Home</h3>
+            </a>
+
+            <a class="menu-item">
+              <span><i class="ri-compass-3-line"></i></span>
+              <h3>Explore</h3>
+            </a>
+
+            <a class="menu-item" id="notifications">
+              <span
+                ><i class="ri-notification-3-line"
+                  ><small class="notification-count">9+</small></i
+                ></span
+              >
+              <h3>Notifications</h3>
+
+              <!-- Notification Popup -->
+              <div class="notification-popup">
+                <div>
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-2.jpg" alt="user2" />
+                  </div>
+
+                  <div class="notification-body">
+                    <p><b>Keke Benjamin</b> accepted your friend request</p>
+                    <small class="text-muted">2 DAYS AGO</small>
+                  </div>
+                </div>
+
+                <div>
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-3.jpg" alt="user2" />
+                  </div>
+
+                  <div class="notification-body">
+                    <p><b>Ayivor Mensah</b> commected on your post</p>
+                    <small class="text-muted">1 HOUR AGO</small>
+                  </div>
+                </div>
+
+                <div>
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-4.jpg" alt="user2" />
+                  </div>
+
+                  <div class="notification-body">
+                    <p>
+                      <b>Mary Oppong</b> and <b>283 others</b>liked your post
+                    </p>
+                    <small class="text-muted">4 MINUTES AGO</small>
+                  </div>
+                </div>
+
+                <div>
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-5.jpg" alt="user2" />
+                  </div>
+
+                  <div class="notification-body">
+                    <p>
+                      <b>Daris Y.Lastey</b> commented on the post you're tagged
+                      in
+                    </p>
+                    <small class="text-muted">2 DAYS AGO</small>
+                  </div>
+                </div>
+
+                <div>
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-6.jpg" alt="user2" />
+                  </div>
+
+                  <div class="notification-body">
+                    <p><b>Donald Trumo</b> commented on your post</p>
+                    <small class="text-muted">1 Hour AGO</small>
+                  </div>
+                </div>
+
+                <div>
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-7.jpg" alt="user2" />
+                  </div>
+
+                  <div class="notification-body">
+                    <p><b>Jane Doe</b> commented on your post</p>
+                    <small class="text-muted">1 Hour AGO</small>
+                  </div>
+                </div>
+              </div>
+              <!-- end of notification popup -->
+            </a>
+
+            <a class="menu-item" id="message-notification">
+              <span
+                ><i class="ri-mail-line"
+                  ><small class="notification-count">6</small></i
+                ></span
+              >
+              <h3>Messages</h3>
+            </a>
+
+            <a class="menu-item">
+              <span><i class="ri-bookmark-line"></i></span>
+              <h3>Bookmarks</h3>
+            </a>
+
+            <a class="menu-item">
+              <span><i class="ri-line-chart-line"></i></span>
+              <h3>Analytics</h3>
+            </a>
+
+            <a class="menu-item">
+              <span><i class="ri-moon-clear-line"></i></span>
+              <h3>Theme</h3>
+            </a>
+
+            <a class="menu-item">
+              <span><i class="ri-settings-4-line"></i></span>
+              <h3>Settings</h3>
+            </a>
+          </div>
+
+          <label for="create-post" class="btn btn-primary">Create Post</label>
+        </div>
 
         <!-- center -->
         <div class="center"></div>
